--- a/test.html
+++ b/test.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Document</title>
 </head>
 <body>
     <button onclick="get()">get</button>
+    <h1 id="h1"></h1>
+    <h2 id="h2"></h2>
+    <span id="span"></span>
     <script>
         get = () =>{
-            fetch("http://127.0.0.1:8000/country/all")
+            fetch("https://capitlasapi.herokuapp.com/country/all?country=canada")
             .then(response => response.json())
             .then(data => {
                 console.log("Test ======> ")
                 console.log(data);
+                // $("#h1").html()
+                // $('#h2').html();
+                console.log(data.country)
+
             })
         }
     </script>
